add api upload file

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -56,3 +56,51 @@
 + # Cho phép requests từ những origin này
 # Format: origin1,origin2,origin3
 CORS_ORIGINS=*
+# ============================================
+# Admin Configuration
+# ============================================
+# Danh sách email của admin (format JSON array)
+ADMIN_EMAIL=["admin@example.com"]
+
+# ============================================
+# MinIO Configuration (Object Storage)
+# ============================================
+# MinIO endpoint (không có http://)
+MINIO_ENDPOINT=minio:9000
+
+# MinIO access credentials
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+
+# MinIO bucket name
+MINIO_BUCKET_NAME=jvb-documents
+
+# MinIO secure connection (False for local, True for production with HTTPS)
+MINIO_SECURE=False
+
+# ============================================
+# Qdrant Configuration (Vector Database)
+# ============================================
+# Qdrant host
+QDRANT_HOST=qdrant
+
+# Qdrant port
+QDRANT_PORT=6333
+
+# Qdrant collection name
+QDRANT_COLLECTION_NAME=jvb_embeddings
+
+# Qdrant API key (optional, for cloud version)
+# QDRANT_API_KEY=your-qdrant-api-key
+
+# ============================================
+# Cohere Configuration (Embeddings)
+# ============================================
+# Cohere API key
+COHERE_API_KEY=your-cohere-api-key-here
+
+# Cohere embedding model
+COHERE_EMBEDDING_MODEL=embed-multilingual-v3.0
+
+# Vector dimension for Cohere embed-multilingual-v3.0
+VECTOR_DIMENSION=1024
