--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   db:
@@ -48,15 +46,8 @@ services:
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     ports:
       - "8000:8000"
-    environment:
-      DATABASE_URL: postgresql+psycopg2://postgres:postgres@db:5432/jvb_db
-      REDIS_URL: redis://redis:6379/0
-      REDIS_BLACKLIST_DB: 1
-      SECRET_KEY: your-super-secret-key-change-this-in-production
-      ALGORITHM: HS256
-      ACCESS_TOKEN_EXPIRE_MINUTES: 15
-      REFRESH_TOKEN_EXPIRE_DAYS: 7
-      DEBUG: "True"
+    env_file:
+      - ./backend/.env
     volumes:
       - ./backend:/app
     depends_on:
@@ -64,6 +55,10 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      minio:
+        condition: service_started
+      qdrant:
+        condition: service_started
     networks:
       - jvb_network
 
