--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,5 +27,8 @@ redis==5.0.1
 # MinIO - Object Storage
 minio==7.2.0
 
+# Qdrant Vector Database Client
+qdrant-client==1.7.3
+
 # Note: AI processing dependencies (Cohere, LangChain, etc.) 
 # are now in ai-service/requirements.txt
