--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,24 @@ services:
     networks:
       - jvb_network
 
+  # Frontend (React + Vite)
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: jvb_frontend
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_BASE_URL=http://localhost:8000
+    depends_on:
+      - backend
+    networks:
+      - jvb_network
+
 volumes:
   postgres_data:
   redis_data:
