--- a/backend/.env.example
+++ b/backend/.env.example
@@ -78,6 +78,9 @@ MINIO_BUCKET_NAME=jvb-documents
 # MinIO secure connection (False for local, True for production with HTTPS)
 MINIO_SECURE=False
 
+# MinIO public URL (for accessing uploaded files from browser)
+MINIO_URL=http://localhost:9000
+
 # ============================================
 # Qdrant Configuration (Vector Database)
 # ============================================
