--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -41,22 +40,25 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
+    "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.5.2",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
+    "next-themes": "^0.4.4",
+    "react": "^19.2.0",
+    "react-day-picker": "^9.4.5",
+    "react-dom": "^19.2.0",
+    "react-easy-crop": "^5.5.6",
+    "react-hook-form": "^7.54.2",
+    "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.13.1",
     "recharts": "^2.15.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
-    "embla-carousel-react": "^8.5.2",
-    "react-day-picker": "^9.4.5",
-    "date-fns": "^3.6.0",
-    "cmdk": "^1.0.4",
-    "sonner": "^1.7.1",
-    "react-resizable-panels": "^2.1.7",
-    "input-otp": "^1.4.1",
-    "react-hook-form": "^7.54.2",
-    "@hookform/resolvers": "^3.9.1",
-    "zod": "^3.24.1",
-    "next-themes": "^0.4.4"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
