--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,13 @@
 .env
 .env.local
 .env.*.local
+.env.production
 backend/.env
+backend/.env.production
+ai-service/.env
+ai-service/.env.production
+frontend/.env
+frontend/.env.production
 
 # Python
 __pycache__/
